# rta-todo

./: .editorconfig  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
sava-data/: saveData.json
src/: App.vue  bindings.ts  main.ts  todoItem.ts  todoListItem.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: SaveData.rs  commands.rs  events.rs  lib.rs  main.rs  save_data.rs
src-tauri/src/commands/: save_data.rs  timer.rs  updater.rs
src-tauri/src/events/: timer.rs  window.rs
src/components/base/: ComingSoonBoard.vue  KeySettingButton.vue  RTATimer.vue  TodoListItem.vue  UpdateDialog.vue
src/components/layout/: AboutNavbar.vue  HomeNavbar.vue  SettingsNavbar.vue  TodoList.vue  TodoListContainer.vue  TodoNavbar.vue
src/components/page/: About.vue  ComingSoon.vue  Home.vue  Settings.vue  Todo.vue
