[package]
name = "rta-todo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.39.3"
specta = { version = "1.0.5", features = ["uuid", "chrono"] }
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
anyhow = "1.0.86"
anyhow-tauri = "1.0.0"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-os = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
